fix overlapping label and gender type

--- a/style.css
+++ b/style.css
@@ -2658,7 +2658,7 @@ img.photo {
 	float: left;
 	text-align: right;
 	display: block;
-	width: 65px;
+	width: 80px;
 }
 
 .adr, .x-gender, .marital-text, .homepage-url {
